Fixed long in titiel word not wrapping bug
Former-commit-id: 2ab582ea242ce92a290cd89a5f10f230d1461a0f

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -260,6 +260,7 @@ nav ul li ul li {
   @include relative-font-size(2.25);
   letter-spacing: -1px;
   line-height: 1;
+  overflow-wrap: break-word;
 
   @include media-query($on-laptop) {
     @include relative-font-size(2);
